tdf#99474 close direct char fmt at end of para

When exporting to doc, ensure that the FKP entry for direct character
formatting is closed at the end of a paragraph, so that any direct
character formatting in the next paragraph does not apply to the
end-of-paragraph marker (CR).

Also revert the changes for i#119650 and tdf#87437 which targetted
more specific examples of this problem, as those issues should now be
covered by this fix.

Add a test case for the example from tdf#99474

Change-Id: I2cb482adb39a84f152707dafcb18f289ca0bd550
Reviewed-on: https://gerrit.libreoffice.org/24402
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>